--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,11 @@ body {
 
 div {
     display: flex;
-    flex: auto;
 }
 
 .header {
-    padding: 0px 150px;
+    padding: 0px 300px;
     display: flex;
-    flex: auto;
     gap: 25px;
     background-color: #1F2937;
     font-size: 18px;
@@ -25,4 +23,60 @@ div {
     font-size: 24px;
     color: #F9FAF8;
     justify-self: flex-start;
+    font-weight: bold;
+}
+
+.title-section {
+    background-color: #1F2937;
+    padding: 0px 300px;
+    gap: 30px;
+    padding-bottom: 50px;
+    padding-top: 50px;
+}
+
+.main-text {
+    font-size: 48px;
+    font-weight: extra-bold;
+    color: #F9FAF8;
+    margin: 0px;
+    width: 525px;
+}
+
+.secondary-text {
+    font-size: 18px;
+    color: #E5E7EB;
+    margin: 10px 0px;
+    width: 525px;
+}
+
+button {
+    background-color: #3882F6;
+    color: white;
+    font-weight: bold;
+    width: 100px;
+    height: 30px;
+    border: none;
+    border-radius: 7px;
+}
+
+.left-side {
+    flex: 1 1 auto;
+    flex-direction: column;
+    width: 250px;
+    margin: 0px;
+}
+
+.right-side {
+    flex: auto;
+    align-items: center;
+    background-color: gray;
+    width: 400px;
+    height: 250px;
+}
+
+.title-image-text {
+    flex: auto;
+    text-align: center;
+    color: white;
+    font-size: 25px;
 }
