--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,28 @@ img {
 .dog-2,
 .dog-3,
 .dog-4 {
-    display:flex;
+    display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.quote-section {
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.quote {
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937;
+    width: 755px;
+}
+
+.thor {
+    font-weight: bold;
+    position: relative;
+    left: 250px;
+    bottom: 65px;
 }
